--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ colorama = "^0.4.6"
 questionary = "^2.1.0"
 rich = "^13.9.4"
 langchain-google-genai = "^2.0.11"
+yfinance = "^0.2.55"
+diskcache = "^5.6.3"
+scipy = "<1.15.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
