--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
 # For running LLMs hosted by openai (gpt-4o, gpt-4o-mini, etc.)
 # Get your OpenAI API key from https://platform.openai.com/
 OPENAI_API_KEY=your-openai-api-key
+
+SILICONFLOW_API_KEY=
+SILICONFLOW_BASE_URL=
